examples/test/testpolicy5967.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5967
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key9: value38
      key12: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value30
      podSelector:
        matchLabels:
          key36: value45
          key32: value0
